labnote/resources/css/default.css
/** Lab notebook styles */
/** 
 * Gradient horizontal ruler
 * http://jsfiddle.net/chriscoyier/GaEzp/35/ 
 */
hr {
    border: 0;
    height: 1px;
    background-image: -webkit-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0)); 
    background-image:    -moz-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0)); 
    background-image:     -ms-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0)); 
    background-image:      -o-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0)); 
    opacity: 0.75;
}

/** Header */
#header {
    text-align: center;
    margin-top: 1.5rem;
}
#header h1 {
    font-family: monospace, sans-serif;
    font-size: 5em;
    font-weight: 500;
}

#header h1, h3 {
    margin: 0;
    line-height: 1.1em;
}
#last-update {
    font-size: 1.2em;
}

/** Category */
.category-header {
    font-family: 'Pacifico', cursive;
    font-size: 2.3em;
    color: #3C3C3C;
    text-shadow: #cccccc 5px 5px 15px;
}
.category-image {
    max-width: 100%;
}

/** Entry **/
ul {
    font-family: 'Ubuntu', sans-serif;
    font-size: 1.3em;
    list-style: none;
}
.category {
    line-height: 1rem;
    color: #404040;
}
.category time {
    font-family: 'courier new', monospace;
    margin-right: 1.5rem;
}

/** External link icons **/
img.slideshow {
    content: url(../img/libreoffice-impress.png);
    width: 16px;
    height: 16px;
}

/** Link styles */
a, a:visited { color: #404040; text-decoration: none; }
a:hover, a:visited:hover { color: #ff5900; }

